--- a/.gitattributes
+++ b/.gitattributes
@@ -72756,6 +72756,11 @@ tests/sys/aio/Makefile svneol=native#text/plain
 tests/sys/aio/aio_kqueue_test.c svneol=native#text/plain
 tests/sys/aio/aio_test.c svneol=native#text/plain
 tests/sys/aio/lio_kqueue_test.c svneol=native#text/plain
+tests/sys/fifo/Makefile svneol=native#text/plain
+tests/sys/fifo/fifo_create.c svneol=native#text/plain
+tests/sys/fifo/fifo_io.c svneol=native#text/plain
+tests/sys/fifo/fifo_misc.c svneol=native#text/plain
+tests/sys/fifo/fifo_open.c svneol=native#text/plain
 tests/sys/mac/Makefile svneol=native#text/plain
 tests/sys/mac/bsdextended/Makefile svneol=native#text/plain
 tests/sys/mac/bsdextended/matches_test.sh svneol=native#text/plain
