--- a/.gitattributes
+++ b/.gitattributes
@@ -74335,6 +74335,7 @@ tools/tools/netmap/nm_util.c svneol=native#text/plain
 tools/tools/netmap/nm_util.h svneol=native#text/plain
 tools/tools/netmap/pcap.c svneol=native#text/plain
 tools/tools/netmap/pkt-gen.c svneol=native#text/plain
+tools/tools/netmap/vale-ctl.c svneol=native#text/plain
 tools/tools/netrate/Makefile -text
 tools/tools/netrate/Makefile.inc -text
 tools/tools/netrate/README -text
