--- a/tools/tools/ncpus/Makefile
+++ b/tools/tools/ncpus/Makefile
@@ -1,7 +1,8 @@
-# $FreeBSD: src/tools/tools/ncpus/Makefile,v 1.1.2.2 2006/03/10 22:04:07 sam Exp $
+# $MidnightBSD$
+# $FreeBSD: stable/10/tools/tools/ncpus/Makefile 276486 2014-12-31 23:25:37Z ngie $
 
 PROG=	ncpus
-NO_MAN=
+MAN=
 SRCS=	ncpus.c acpi.c
 .if ${MACHINE_ARCH} == "amd64" || ${MACHINE_ARCH} == "i386"
 SRCS+=	biosmptable.c
