--- a/.gitattributes
+++ b/.gitattributes
@@ -74415,6 +74415,23 @@ tools/tools/usbtest/usb_msc_test.c svneol=native#text/plain
 tools/tools/usbtest/usb_msc_test.h svneol=native#text/plain
 tools/tools/usbtest/usbtest.c svneol=native#text/plain
 tools/tools/usbtest/usbtest.h svneol=native#text/plain
+tools/tools/vhba/Makefile svneol=native#text/plain
+tools/tools/vhba/README -text
+tools/tools/vhba/faulty/Makefile svneol=native#text/plain
+tools/tools/vhba/faulty/vhba_faulty.c svneol=native#text/plain
+tools/tools/vhba/lots/Makefile svneol=native#text/plain
+tools/tools/vhba/lots/vhba_lots.c svneol=native#text/plain
+tools/tools/vhba/medium/Makefile svneol=native#text/plain
+tools/tools/vhba/medium/vhba_medium.c svneol=native#text/plain
+tools/tools/vhba/mptest/Makefile svneol=native#text/plain
+tools/tools/vhba/mptest/vhba_mptest.c svneol=native#text/plain
+tools/tools/vhba/opt_cam.h svneol=native#text/plain
+tools/tools/vhba/rptluns/Makefile svneol=native#text/plain
+tools/tools/vhba/rptluns/vhba_rptluns.c svneol=native#text/plain
+tools/tools/vhba/simple/Makefile svneol=native#text/plain
+tools/tools/vhba/simple/vhba_simple.c svneol=native#text/plain
+tools/tools/vhba/vhba.c svneol=native#text/plain
+tools/tools/vhba/vhba.h svneol=native#text/plain
 tools/tools/vimage/Makefile svneol=native#text/plain
 tools/tools/vimage/vimage.8 svneol=native#text/plain
 tools/tools/vimage/vimage.c svneol=native#text/plain
