--- a/.gitattributes
+++ b/.gitattributes
@@ -72770,6 +72770,24 @@ tests/sys/mac/portacl/Makefile svneol=native#text/plain
 tests/sys/mac/portacl/misc.sh svneol=native#text/plain
 tests/sys/mac/portacl/nobody_test.sh svneol=native#text/plain
 tests/sys/mac/portacl/root_test.sh svneol=native#text/plain
+tests/sys/pjdfstest/tests/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/tests/chflags/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/tests/chmod/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/tests/chown/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/tests/conf -text
+tests/sys/pjdfstest/tests/ftruncate/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/tests/granular/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/tests/link/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/tests/mkdir/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/tests/mkfifo/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/tests/mknod/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/tests/open/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/tests/pjdfstest.test.mk svneol=native#text/plain
+tests/sys/pjdfstest/tests/rename/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/tests/rmdir/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/tests/symlink/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/tests/truncate/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/tests/unlink/Makefile svneol=native#text/plain
 tests/sys/posixshm/Makefile svneol=native#text/plain
 tests/sys/posixshm/posixshm_test.c svneol=native#text/plain
 tests/sys/vfs/Makefile svneol=native#text/plain
