--- a/.gitattributes
+++ b/.gitattributes
@@ -72770,6 +72770,8 @@ tests/sys/mac/portacl/Makefile svneol=native#text/plain
 tests/sys/mac/portacl/misc.sh svneol=native#text/plain
 tests/sys/mac/portacl/nobody_test.sh svneol=native#text/plain
 tests/sys/mac/portacl/root_test.sh svneol=native#text/plain
+tests/sys/pjdfstest/Makefile svneol=native#text/plain
+tests/sys/pjdfstest/pjdfstest/Makefile svneol=native#text/plain
 tests/sys/pjdfstest/tests/Makefile svneol=native#text/plain
 tests/sys/pjdfstest/tests/chflags/Makefile svneol=native#text/plain
 tests/sys/pjdfstest/tests/chmod/Makefile svneol=native#text/plain
