--- a/.gitattributes
+++ b/.gitattributes
@@ -72770,6 +72770,13 @@ tests/sys/mac/portacl/Makefile svneol=native#text/plain
 tests/sys/mac/portacl/misc.sh svneol=native#text/plain
 tests/sys/mac/portacl/nobody_test.sh svneol=native#text/plain
 tests/sys/mac/portacl/root_test.sh svneol=native#text/plain
+tests/sys/mqueue/Makefile svneol=native#text/plain
+tests/sys/mqueue/mqtest1.c svneol=native#text/plain
+tests/sys/mqueue/mqtest2.c svneol=native#text/plain
+tests/sys/mqueue/mqtest3.c svneol=native#text/plain
+tests/sys/mqueue/mqtest4.c svneol=native#text/plain
+tests/sys/mqueue/mqtest5.c svneol=native#text/plain
+tests/sys/mqueue/mqueue_test.sh svneol=native#text/plain
 tests/sys/netinet/Makefile svneol=native#text/plain
 tests/sys/netinet/fibs_test.sh svneol=native#text/plain
 tests/sys/netinet/udp_dontroute.c svneol=native#text/plain
