add kqueue tests

--- a/.gitattributes
+++ b/.gitattributes
@@ -72761,6 +72761,21 @@ tests/sys/fifo/fifo_create.c svneol=native#text/plain
 tests/sys/fifo/fifo_io.c svneol=native#text/plain
 tests/sys/fifo/fifo_misc.c svneol=native#text/plain
 tests/sys/fifo/fifo_open.c svneol=native#text/plain
+tests/sys/kqueue/Makefile svneol=native#text/plain
+tests/sys/kqueue/libkqueue/Makefile svneol=native#text/plain
+tests/sys/kqueue/libkqueue/Makefile.depend svneol=native#text/plain
+tests/sys/kqueue/libkqueue/common.h svneol=native#text/plain
+tests/sys/kqueue/libkqueue/config.h svneol=native#text/plain
+tests/sys/kqueue/libkqueue/kqueue_test.sh svneol=native#text/plain
+tests/sys/kqueue/libkqueue/main.c svneol=native#text/plain
+tests/sys/kqueue/libkqueue/proc.c svneol=native#text/plain
+tests/sys/kqueue/libkqueue/read.c svneol=native#text/plain
+tests/sys/kqueue/libkqueue/signal.c svneol=native#text/plain
+tests/sys/kqueue/libkqueue/timer.c svneol=native#text/plain
+tests/sys/kqueue/libkqueue/user.c svneol=native#text/plain
+tests/sys/kqueue/libkqueue/vnode.c svneol=native#text/plain
+tests/sys/kqueue/main.c svneol=native#text/plain
+tests/sys/kqueue/read.c svneol=native#text/plain
 tests/sys/mac/Makefile svneol=native#text/plain
 tests/sys/mac/bsdextended/Makefile svneol=native#text/plain
 tests/sys/mac/bsdextended/matches_test.sh svneol=native#text/plain
