--- a/.gitattributes
+++ b/.gitattributes
@@ -72761,6 +72761,34 @@ tests/sys/fifo/fifo_create.c svneol=native#text/plain
 tests/sys/fifo/fifo_io.c svneol=native#text/plain
 tests/sys/fifo/fifo_misc.c svneol=native#text/plain
 tests/sys/fifo/fifo_open.c svneol=native#text/plain
+tests/sys/kern/Makefile svneol=native#text/plain
+tests/sys/kern/acct/Makefile svneol=native#text/plain
+tests/sys/kern/acct/acct_test.c svneol=native#text/plain
+tests/sys/kern/execve/Makefile svneol=native#text/plain
+tests/sys/kern/execve/bad_interp_len -text
+tests/sys/kern/execve/dev_null_script -text
+tests/sys/kern/execve/execve_helper.c svneol=native#text/plain
+tests/sys/kern/execve/execve_test.sh svneol=native#text/plain
+tests/sys/kern/execve/good_aout.c svneol=native#text/plain
+tests/sys/kern/execve/good_script -text
+tests/sys/kern/execve/non_exist_shell -text
+tests/sys/kern/execve/script_arg -text
+tests/sys/kern/execve/script_arg_nospace -text
+tests/sys/kern/kern_descrip_test.c svneol=native#text/plain
+tests/sys/kern/pipe/Makefile svneol=native#text/plain
+tests/sys/kern/pipe/big_pipe_test.c svneol=native#text/plain
+tests/sys/kern/pipe/pipe_fstat_bug_test.c svneol=native#text/plain
+tests/sys/kern/pipe/pipe_ino_test.c svneol=native#text/plain
+tests/sys/kern/pipe/pipe_overcommit1_test.c svneol=native#text/plain
+tests/sys/kern/pipe/pipe_overcommit2_test.c svneol=native#text/plain
+tests/sys/kern/pipe/pipe_reverse2_test.c svneol=native#text/plain
+tests/sys/kern/pipe/pipe_reverse_test.c svneol=native#text/plain
+tests/sys/kern/pipe/pipe_wraparound_test.c svneol=native#text/plain
+tests/sys/kern/ptrace_test.c svneol=native#text/plain
+tests/sys/kern/reaper.c svneol=native#text/plain
+tests/sys/kern/unix_passfd_test.c svneol=native#text/plain
+tests/sys/kern/unix_seqpacket_test.c svneol=native#text/plain
+tests/sys/kern/waitpid_nohang.c svneol=native#text/plain
 tests/sys/kqueue/Makefile svneol=native#text/plain
 tests/sys/kqueue/libkqueue/Makefile svneol=native#text/plain
 tests/sys/kqueue/libkqueue/Makefile.depend svneol=native#text/plain
