--- a/.gitattributes
+++ b/.gitattributes
@@ -72761,6 +72761,14 @@ tests/sys/fifo/fifo_create.c svneol=native#text/plain
 tests/sys/fifo/fifo_io.c svneol=native#text/plain
 tests/sys/fifo/fifo_misc.c svneol=native#text/plain
 tests/sys/fifo/fifo_open.c svneol=native#text/plain
+tests/sys/file/Makefile svneol=native#text/plain
+tests/sys/file/closefrom_test.c svneol=native#text/plain
+tests/sys/file/dup_test.c svneol=native#text/plain
+tests/sys/file/fcntlflags_test.c svneol=native#text/plain
+tests/sys/file/flock_helper.c svneol=native#text/plain
+tests/sys/file/flock_test.sh svneol=native#text/plain
+tests/sys/file/ftruncate_test.c svneol=native#text/plain
+tests/sys/file/newfileops_on_fork_test.c svneol=native#text/plain
 tests/sys/kern/Makefile svneol=native#text/plain
 tests/sys/kern/acct/Makefile svneol=native#text/plain
 tests/sys/kern/acct/acct_test.c svneol=native#text/plain
