--- a/.gitattributes
+++ b/.gitattributes
@@ -72769,6 +72769,8 @@ tests/sys/file/flock_helper.c svneol=native#text/plain
 tests/sys/file/flock_test.sh svneol=native#text/plain
 tests/sys/file/ftruncate_test.c svneol=native#text/plain
 tests/sys/file/newfileops_on_fork_test.c svneol=native#text/plain
+tests/sys/fs/Makefile svneol=native#text/plain
+tests/sys/fs/tmpfs/Makefile svneol=native#text/plain
 tests/sys/kern/Makefile svneol=native#text/plain
 tests/sys/kern/acct/Makefile svneol=native#text/plain
 tests/sys/kern/acct/acct_test.c svneol=native#text/plain
