--- a/.gitattributes
+++ b/.gitattributes
@@ -72771,6 +72771,76 @@ tests/sys/file/ftruncate_test.c svneol=native#text/plain
 tests/sys/file/newfileops_on_fork_test.c svneol=native#text/plain
 tests/sys/fs/Makefile svneol=native#text/plain
 tests/sys/fs/tmpfs/Makefile svneol=native#text/plain
+tests/sys/geom/Makefile svneol=native#text/plain
+tests/sys/geom/class/Makefile svneol=native#text/plain
+tests/sys/geom/class/concat/1_test.sh svneol=native#text/plain
+tests/sys/geom/class/concat/2_test.sh svneol=native#text/plain
+tests/sys/geom/class/concat/Makefile svneol=native#text/plain
+tests/sys/geom/class/concat/conf.sh svneol=native#text/plain
+tests/sys/geom/class/eli/Makefile svneol=native#text/plain
+tests/sys/geom/class/eli/attach_d_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/conf.sh svneol=native#text/plain
+tests/sys/geom/class/eli/configure_b_B_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/delkey_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/detach_l_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/init_B_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/init_J_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/init_a_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/init_alias_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/init_i_P_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/init_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/integrity_copy_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/integrity_data_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/integrity_hmac_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/kill_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/nokey_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/onetime_a_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/onetime_d_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/onetime_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/readonly_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/resize_test.sh svneol=native#text/plain
+tests/sys/geom/class/eli/setkey_test.sh svneol=native#text/plain
+tests/sys/geom/class/gate/Makefile svneol=native#text/plain
+tests/sys/geom/class/gate/ggate_test.sh svneol=native#text/plain
+tests/sys/geom/class/geom_subr.sh svneol=native#text/plain
+tests/sys/geom/class/mirror/1_test.sh svneol=native#text/plain
+tests/sys/geom/class/mirror/2_test.sh svneol=native#text/plain
+tests/sys/geom/class/mirror/3_test.sh svneol=native#text/plain
+tests/sys/geom/class/mirror/4_test.sh svneol=native#text/plain
+tests/sys/geom/class/mirror/5_test.sh svneol=native#text/plain
+tests/sys/geom/class/mirror/6_test.sh svneol=native#text/plain
+tests/sys/geom/class/mirror/7_test.sh svneol=native#text/plain
+tests/sys/geom/class/mirror/Makefile svneol=native#text/plain
+tests/sys/geom/class/mirror/conf.sh svneol=native#text/plain
+tests/sys/geom/class/nop/Makefile svneol=native#text/plain
+tests/sys/geom/class/nop/nop_test.sh svneol=native#text/plain
+tests/sys/geom/class/raid3/10_test.sh svneol=native#text/plain
+tests/sys/geom/class/raid3/11_test.sh svneol=native#text/plain
+tests/sys/geom/class/raid3/12_test.sh svneol=native#text/plain
+tests/sys/geom/class/raid3/1_test.sh svneol=native#text/plain
+tests/sys/geom/class/raid3/2_test.sh svneol=native#text/plain
+tests/sys/geom/class/raid3/3_test.sh svneol=native#text/plain
+tests/sys/geom/class/raid3/4_test.sh svneol=native#text/plain
+tests/sys/geom/class/raid3/5_test.sh svneol=native#text/plain
+tests/sys/geom/class/raid3/6_test.sh svneol=native#text/plain
+tests/sys/geom/class/raid3/7_test.sh svneol=native#text/plain
+tests/sys/geom/class/raid3/8_test.sh svneol=native#text/plain
+tests/sys/geom/class/raid3/9_test.sh svneol=native#text/plain
+tests/sys/geom/class/raid3/Makefile svneol=native#text/plain
+tests/sys/geom/class/raid3/conf.sh svneol=native#text/plain
+tests/sys/geom/class/shsec/1_test.sh svneol=native#text/plain
+tests/sys/geom/class/shsec/2_test.sh svneol=native#text/plain
+tests/sys/geom/class/shsec/Makefile svneol=native#text/plain
+tests/sys/geom/class/shsec/conf.sh svneol=native#text/plain
+tests/sys/geom/class/stripe/1_test.sh svneol=native#text/plain
+tests/sys/geom/class/stripe/2_test.sh svneol=native#text/plain
+tests/sys/geom/class/stripe/Makefile svneol=native#text/plain
+tests/sys/geom/class/stripe/conf.sh svneol=native#text/plain
+tests/sys/geom/class/uzip/1_test.sh svneol=native#text/plain
+tests/sys/geom/class/uzip/Makefile svneol=native#text/plain
+tests/sys/geom/class/uzip/conf.sh svneol=native#text/plain
+tests/sys/geom/class/uzip/etalon/etalon.txt svneol=native#text/plain
+tests/sys/geom/class/uzip/test-1.img.uzip.uue -text
 tests/sys/kern/Makefile svneol=native#text/plain
 tests/sys/kern/acct/Makefile svneol=native#text/plain
 tests/sys/kern/acct/acct_test.c svneol=native#text/plain
