--- a/sys/modules/aacraid/Makefile.inc
+++ b/sys/modules/aacraid/Makefile.inc
@@ -1,4 +1,4 @@
-/*# $MidnightBSD$ */
+# $MidnightBSD$ 
 # $FreeBSD: stable/10/sys/modules/aacraid/Makefile.inc 250963 2013-05-24 09:22:43Z achim $
 
 .include "../Makefile.inc"
