--- a/lib/libc/yp/Makefile.inc
+++ b/lib/libc/yp/Makefile.inc
@@ -1,5 +1,6 @@
 #	from: @(#)Makefile.inc	5.3 (Berkeley) 2/20/91
 # $FreeBSD: src/lib/libc/yp/Makefile.inc,v 1.10 2006/03/13 01:15:01 deischen Exp $
+# $MidnightBSD$
 
 # yp sources
 .PATH: ${.CURDIR}/yp
