--- a/.gitattributes
+++ b/.gitattributes
@@ -49955,6 +49955,85 @@ gnu/usr.bin/grep/xmalloc.c -text
 gnu/usr.bin/grep/xstrtol.c -text
 gnu/usr.bin/grep/xstrtol.h -text
 gnu/usr.bin/grep/xstrtoumax.c -text
+gnu/usr.bin/groff/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/Makefile.inc svneol=native#text/plain
+gnu/usr.bin/groff/contrib/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/contrib/Makefile.inc svneol=native#text/plain
+gnu/usr.bin/groff/contrib/groffer/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/contrib/mm/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/doc/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/font/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/font/Makefile.dev svneol=native#text/plain
+gnu/usr.bin/groff/font/Makefile.inc svneol=native#text/plain
+gnu/usr.bin/groff/font/Makefile.tty svneol=native#text/plain
+gnu/usr.bin/groff/font/devX100-12/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/font/devX100/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/font/devX75-12/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/font/devX75/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/font/devascii/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/font/devcp1047/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/font/devdvi/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/font/devhtml/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/font/devkoi8-r/DESC.proto -text
+gnu/usr.bin/groff/font/devkoi8-r/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/font/devkoi8-r/R.proto -text
+gnu/usr.bin/groff/font/devlatin1/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/font/devlbp/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/font/devlj4/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/font/devps/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/font/devutf8/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/man/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/devices/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/devices/Makefile.inc svneol=native#text/plain
+gnu/usr.bin/groff/src/devices/grodvi/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/devices/grohtml/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/devices/grolbp/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/devices/grolj4/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/devices/grops/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/devices/grotty/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/devices/xditview/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/include/config.h svneol=native#text/plain
+gnu/usr.bin/groff/src/include/defs.h svneol=native#text/plain
+gnu/usr.bin/groff/src/libs/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/libs/Makefile.inc svneol=native#text/plain
+gnu/usr.bin/groff/src/libs/libbib/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/libs/libdriver/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/libs/libgroff/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/preproc/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/preproc/Makefile.inc svneol=native#text/plain
+gnu/usr.bin/groff/src/preproc/eqn/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/preproc/grn/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/preproc/html/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/preproc/pic/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/preproc/refer/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/preproc/soelim/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/preproc/tbl/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/roff/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/roff/Makefile.inc svneol=native#text/plain
+gnu/usr.bin/groff/src/roff/groff/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/roff/grog/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/roff/nroff/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/roff/psroff/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/roff/psroff/psroff.1 svneol=native#text/plain
+gnu/usr.bin/groff/src/roff/psroff/psroff.sh svneol=native#text/plain
+gnu/usr.bin/groff/src/roff/troff/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/utils/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/utils/Makefile.inc svneol=native#text/plain
+gnu/usr.bin/groff/src/utils/addftinfo/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/utils/afmtodit/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/utils/hpftodit/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/utils/indxbib/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/utils/lkbib/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/utils/lookbib/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/utils/pfbtops/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/src/utils/tfmtodit/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/tmac/Makefile svneol=native#text/plain
+gnu/usr.bin/groff/tmac/fr.ISO8859-1 -text
+gnu/usr.bin/groff/tmac/hyphen.ru -text svneol=unset#application/octet-stream
+gnu/usr.bin/groff/tmac/koi8-r.tmac -text
+gnu/usr.bin/groff/tmac/mdoc.local -text
+gnu/usr.bin/groff/tmac/ru.KOI8-R -text
 gnu/usr.bin/man/COPYING -text
 gnu/usr.bin/man/Makefile -text
 gnu/usr.bin/man/Makefile.inc -text
