--- a/.gitattributes
+++ b/.gitattributes
@@ -76126,6 +76126,7 @@ usr.bin/brandelf/Makefile -text
 usr.bin/brandelf/brandelf.1 -text
 usr.bin/brandelf/brandelf.c -text
 usr.bin/bsdcat/Makefile svneol=native#text/plain
+usr.bin/bsdcat/config_midnightbsd.h svneol=native#text/plain
 usr.bin/bsdcat/tests/Makefile svneol=native#text/plain
 usr.bin/bsdcat/tests/functional_test.sh svneol=native#text/plain
 usr.bin/bsdiff/Makefile -text
