--- a/.gitattributes
+++ b/.gitattributes
@@ -48888,6 +48888,7 @@ etc/master.passwd -text
 etc/minfree -text
 etc/motd -text
 etc/mtree/BSD.debug.dist -text
+etc/mtree/BSD.groff.dist -text
 etc/mtree/BSD.include.dist -text
 etc/mtree/BSD.local.dist -text
 etc/mtree/BSD.release.dist -text
