--- a/gnu/usr.bin/groff/Makefile
+++ b/gnu/usr.bin/groff/Makefile
@@ -2,4 +2,10 @@
 
 SUBDIR=		contrib doc font man src tmac
 
+.for subdir in ${SUBDIR:Nsrc}
+SUBDIR_DEPEND_${subdir}=	src
+.endfor
+
+SUBDIR_PARALLEL=
+
 .include <bsd.subdir.mk>
